Fix hljs for dark mode #313

--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -1,3 +1,7 @@
+html.theme-dark {
+  @import '../../../node_modules/highlight.js/scss/atom-one-dark.scss';
+}
+
 html.theme-dark,
 :root {
   --body-bg: #1f2122;
